# dr_util

./: .gitignore  README.md  pyproject.toml
configs/: base_config.yaml  s3man.yaml  s3man_config.yaml
configs/data/: cifar10.yaml
configs/paths/: mac.yaml
configs/s3man_source/: refined.yaml
notebooks/: roam_api.ipynb
old_rye_files/: pyproject.toml
scripts/: read_openreview_api.py  read_pmlr_rss.py  read_rss.py  s3man.py  template_script.py
scripts/conf/: s3man_config.yaml
scripts/conf/s3man_source/: refined.yaml
scripts/paper_extract/: __init__.py  bibtex_extractor.py  read_cvf_papers.py  read_openreview_api.py  read_pmlr_rss.py
scripts/slurm_inspect/: __init__.py  idle_gpus.py  slurm_info.py
src/dr_util/: __init__.py  aws_utils.py  config_verification.py  data_utils.py  determinism_utils.py  file_utils.py  log_utils.py  logging.py  metrics.py  print_utils.py  schema_utils.py  schemas.py
src/dr_util/api_wrappers/: aws_utils.py  roam_utils.py
src/dr_util/data_structs/: array_dict.py  data_struct.py  int_to_ints.py
tests/: test_determinism.py  test_determinsm.py  test_file_utils.py  test_metrics.py
