[project]
name = "dr-util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.21",
    "hydra-core==1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
