[project]
name = "dr-util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bibtexparser>=1.4.3",
    "boto3>=1.36.21",
    "feedparser>=6.0.11",
    "hydra-core==1.3",
    "jsonlines>=4.0.0",
    "numpy>=2.2.3",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "mypy>=1.16.0",
    "tomlkit>=0.12.0",
    "types-requests>=2.32.4.20250611",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0",      # Coverage reports
    "pytest-xdist>=3.0",    # Parallel execution
    "pytest-timeout>=2.0",  # Timeout long-running tests
    "pytest-mock>=3.0",     # Better mocking
    "pytest-benchmark>=4.0", # Performance benchmarking
]
test-ml = [
    "pytest-pytorch>=0.2",   # PyTorch test utilities
    "pytest-randomly>=3.0",  # Randomize test order
]
all = [
    {include-group = "dev"},
    {include-group = "test"},
]

[tool.ruff]
line-length = 88
exclude = ["outputs/*", "notebooks/*"]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
extend-select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "A",    # flake8-builtins
    "FBT",  # flake8-boolean-trap
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "INT",  # flake8-gettext
    "ARG",  # flake8-nused-arguments
    "PTH",  # flake8-use-pathlib
    "TD",   # flake8-todos
    "FIX",  # flake8-fixme
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # numpy
    "PERF", # perflint
    "RUF",  # ruff specific
    #"D",    # pydocstyle
    #"TCH",  # flake8-type-checking
    #"ANN",  # flake8-annotations 
    "ANN",
    "BLE",
    "C90",
    "D",
    "DTZ",
    "FA",
    "PLW",
    "PLE",
    "PLR0133",
    "PLR1714",
    "PLR2004",
    "RSE",
    "S",
    "TCH",
    "W",
    "YTT"
]
ignore = [
    "COM812", # ignoring both based on conflict
    "ISC001",
    "TD002", # include author name with todo
    "TD003", # link to issue after todo
    "FIX002", # throws on all TODOs
    "T201", # ignore prints for now
    "PT015", # assert always fails, exceptions slow down training code
    "B011", # do not assert false, exceptions slow down training code
    "PLR0913", # too many arguments in function def ???
    "NPY002", # don't use np.random.seed, I don't trust myself to remember
    "S101",
    "ANN001",
    "ANN201",
    "D100",
    "D103",
    "D104",
]


[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".
ignore-decorators = ["typing.overload", "typing.override"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # unused arguments in fixtures
    "PLR2004",  # Magic values are OK in tests
]
"src/models/**/*.py" = [
    "PLR0913",  # Many arguments OK for model configs
]
"scripts/**/*.py" = [
    "T201",     # print() is fine in scripts
]
"*_notebook.py" = [
    "E402", # Import order OK in notebooks
    "F401", # Unused imports OK in notebooks
]  

[tool.ruff.lint.mccabe]
max-complexity = 15  # Higher threshold for ML

[tool.ruff.lint.pylint]
max-args = 10           # More lenient for ML functions
max-statements = 100    # Allow longer functions for training loops


[tool.mypy]
files = ["src/", "tests/"]
mypy_path = "src"
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true
explicit_package_bases = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore missing imports for libraries without type stubs
ignore_missing_imports = true

# Performance
cache_dir = ".mypy_cache"
show_error_codes = true


[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Logging (disabled by default for clean test output)
# Enable with: pytest --log-cli-level=INFO
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Warnings
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

addopts = [
    "--strict-config",
    "--strict-markers",
    "--verbose",
    "-ra",  # show all test outcome reasons
    "-n", "auto",
]

# Fail on unregistered markers
markers = [
    "slow: marks tests as slow",
    "serial: marks tests that must run serially",
    "integration: marks integration tests",
]

[tool.coverage.report]
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@profile",  # Line profiler decorators
    "if _debug:",  # Debug-only code
    "if _profile:",  # Profiling-only code

    # ML-specific exclusions
    "if torch.cuda.is_available()",  # GPU-specific code
    "@torch.no_grad()",  # Inference-only code
    "if __name__ == .__main__.:",  # Script entry points
    "def visualize",  # Visualization/debugging functions
    "except KeyboardInterrupt:",  # User interruption handlers
    "@torch.jit.script",  # JIT compiled code
    "@torch.jit.export",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",  # Standalone scripts
    "notebooks/*",  # Jupyter notebooks
    "*/__init__.py",  # Empty init files
    "*/config.py",  # Configuration files
]
